feat: Introduce a "word" entity (#24)