@@ -2,39 +2,43 @@ package com.booster.server;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class VocabularyEntryService {
 
     private final VocabularyEntryRepository vocabularyEntryRepository;
+    private final WordRepository wordRepository;
 
+    @Transactional
     public VocabularyEntryDto create(CreateVocabularyEntryInput input) {
+        WordEntity wordEntity = wordRepository.findByNameOrCreate(input.getName());
+
         var vocabularyEntryEntity = new VocabularyEntryEntity();
-        vocabularyEntryEntity.setName(input.getName());
+        vocabularyEntryEntity.setWord(wordEntity);
         vocabularyEntryEntity.setDescription(input.getDescription());
 
-        vocabularyEntryEntity = vocabularyEntryRepository.save(vocabularyEntryEntity);
-
-        return vocabularyEntryDto(vocabularyEntryEntity);
+        return vocabularyEntryDto(vocabularyEntryRepository.save(vocabularyEntryEntity));
     }
 
-    public List<VocabularyEntryDto> list(Integer size) {
+    public List<VocabularyEntryDto> batchOfSize(Integer size) {
         return vocabularyEntryRepository.findBatch(size)
                 .stream()
                 .map(this::vocabularyEntryDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private VocabularyEntryDto vocabularyEntryDto(VocabularyEntryEntity entity) {
         return new VocabularyEntryDto()
-                .setName(entity.getName())
+                .setName(entity.getWord().getName())
                 .setDescription(entity.getDescription());
     }
 
+    @Transactional
     public void updateLastSeenAt(UpdateLastSeenAtInput input) {
         List<VocabularyEntryEntity> vocabularyEntries = vocabularyEntryRepository.findAllById(input.getIds());
         vocabularyEntries.forEach(entry -> entry.setLastSeenAt(input.getLastSeenAt()));
